--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
     "cogo-toast": "^4.2.3",
     "d3-dsv": "^1.2.0",
     "faunadb": "^2.13.0",
